@@ -1,4 +1,7 @@
 ---version 2.0.4 yet to be released---
+06-feb-2009 - adelikat - win32 - Hex editor - remembers window size
+06-feb-2009 - adelikat - Win32 - sound config dialog - added sliders for individual sound channel volume control
+06-feb-2009 - adelikat - Sound channels now have individual volume control
 01-jan-2009 - adelikat - Win32 - Timing - "disable throttling when sound is off" now only affects FCEUX when sound is off
 26-dec-2008 - adelikat - Metadata - remember window position
 24-dec-2008 - adelikat - auto-save fixes, prevent loading an auto-save from previous session.  Win32 - added flags for enabling auto-save menu item.
